--- a/config.ini.example
+++ b/config.ini.example
@@ -6,7 +6,7 @@ rootpassword = radware
 
 [General]
 Top_N = 10
-ExcludeFilters = Anomalies,DOSShield
+ExcludeFilters = DOSS-DNS-Ref-L4-Above-3000
 
 [PreviousRun]
 epoch_from_time = 1727907868000
