--- a/config.ini.example
+++ b/config.ini.example
@@ -19,6 +19,9 @@ use_ipqualityscore = False
 ip_quality_score_api_key = 1234
 full_country_names = True
 included_columns = AbuseIPDB_abuseConfidenceScore,AbuseIPDB_countryCode,AbuseIPDB_domain,AbuseIPDB_isp,IPQualityScore_fraud_score,IPQualityScore_country_code,IPQualityScore_host,IPQualityScore_ISP
+use_proxy = False
+http_proxy_address = http://http_proxy_url/
+https_proxy_address = https://https_proxy_url/
 
 [PreviousRun]
 epoch_from_time = 1727907868000
