--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,19 @@
 			]
 		},
 		{
+			"name": "Python Debugger: Main.py --manually-collected --environment TestEnv",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "${workspaceFolder}/main.py",
+			"console": "integratedTerminal",
+			"justMyCode": true,
+			"args":[
+				"--manually-collected",
+				"--environment",
+				"TestEnv"
+			]
+		},
+		{
 			"name": "Python Debugger: Current File",
 			"type": "debugpy",
 			"request": "launch",
