--- a/config.ini.example
+++ b/config.ini.example
@@ -11,6 +11,8 @@ compress_output = TRUE
 minimum_minutes_between_waves = 5
 excluded_attack_types = Memcache, PacketAnomalies, RFC
 excludefilters = DOSS-DNS-Ref-L4-Above-3000
+outputtimeformat = %%d-%%b-%%Y %%H:%%M:%%S %%Z
+useshexbasedsyslogids = True
 
 [Email]
 send_email = FALSE
