--- a/config.ini.example
+++ b/config.ini.example
@@ -7,10 +7,11 @@ rootpassword = radware
 [General]
 Top_N = 10
 ExcludeFilters = Memcached-Server-Reflect
-compress_output = TRUE
 minimum_minutes_between_waves = 5
 excluded_attack_types = Memcache, PacketAnomalies, RFC
 excludefilters = DOSS-DNS-Ref-L4-Above-3000
+outputtimeformat = %%d-%%b-%%Y %%H:%%M:%%S %%Z
+hex_based_syslog_ids = True
 
 [Email]
 send_email = FALSE
